--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,14 @@ body {
 
 .lorem {
     text-align: center;
-    padding: 40px;
+    padding: 15px;
+    margin-top: 15px;
+    color: rgb(21, 17, 17);
+}
+
+.scoreInfo {
+    text-align: center;
+    padding: 5px;
     color: rgb(21, 17, 17);
 }
 
@@ -101,8 +108,8 @@ body {
 .innerdiv {
     padding-top: 35px;
     width: 100%;
-    margin: 20px auto;
-    height: 455px;
+    margin: 10px auto;
+    height: 355px;
     position: absolute;
     background-color: rgb(226, 97, 74);
 
