--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,13 @@ body {
     color: rgb(21, 17, 17);
 }
 
+#x {
+    text-align: center;
+    padding: 15px;
+    margin-top: 15px;
+    color: rgb(21, 17, 17);
+}
+
 .scoreInfo {
     text-align: center;
     padding: 5px;
@@ -93,7 +100,7 @@ body {
     color: rgb(21, 17, 17);
 }
 
-.startdiv {
+.startdiv  {
     padding-top: 5px;
     width: 80%;
     margin: 20px auto;
@@ -105,7 +112,7 @@ body {
     
 }
 
-.innerdiv {
+.finnerdiv {
     padding-top: 35px;
     width: 100%;
     margin: 10px auto;
