--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ body {
     padding-top: 5px;
     width: 80%;
     margin: 20px auto;
-    height: 400px;
+    height: 700px;
     position: absolute;
     margin-left: 10%;
     background-color: rgb(226, 97, 74);
@@ -112,11 +112,11 @@ body {
     
 }
 
-.finnerdiv {
+.innerdiv {
     padding-top: 35px;
     width: 100%;
     margin: 10px auto;
-    height: 455px;
+    height: 755px;
     position: absolute;
     background-color: rgb(226, 97, 74);
 
